[package]
name = "gdbg"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "gear dbg! macro"
repository = "https://github.com/btwiuse/gdbg"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "examples/example",
]
