[package]
name = "gdbg"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "compact dbg! macro for gear smart contracts"
repository = "https://github.com/btwiuse/gdbg"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
  "examples/example",
]
