[package]
name = "example-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
gstd = { version = "1" }
gdbg = { path = "../.." }

[dev-dependencies]
gtest = { version = "1" }

[build-dependencies]
gear-wasm-builder = { version = "1" }
