[package]
name = "example-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[[bin]]
path = "main.rs"
name = "example-bin"

[dependencies]
gdbg = { path = "../..", features = ["std"] }

[profile.dev]
args = ["--", "--show-output"]
